--- a/blixi.html
+++ b/blixi.html
@@ -55,12 +55,13 @@
                 </header>
                 <div class="main-view-list-wrapper">
                     <p class="article-header">by 
-                    <a href="https://apps.apple.com/us/developer/oliver-papp/id896476189" target="_blank" title="Read more">
-                        <span>
-                            <strong>Oliver Papp</strong>
-                        </span>
-                    </a>
-                    on 27/03/2021
+                        <a href="https://apps.apple.com/us/developer/oliver-papp/id896476189" target="_blank" title="Read more">
+                            <span>
+                                <strong>Oliver Papp</strong>
+                            </span>
+                        </a>
+                        on 27/03/2021
+                    </p>
                 </div>
                 <div class="p-terms-content">
                     <p>Blixi is a relaxing puzzle game with beautiful neumorphic design and innovative fresh gameplay. Compete for the top ranks with players from around the world on the constantly updated leaderboards. Blixi is an ideal casual game, you can interrupt and continue your progress at any time.</p>
@@ -74,7 +75,7 @@
                         </div>
                     </div>
                     <p class="subtitle subtitle-strong"><br>How to play</p>
-                    <p>Swipe (Use arrow keys - macOS) & merge circles</p>
+                    <p>Swipe (Use arrow keys - macOS) &amp merge circles</p>
                     <p class="subtitle subtitle-strong">Features</p>
                     <ul>
                         <li>One finger control (iOS only)</li>
